# GitHub-Action-Sample

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  codecov.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
app/config/: settings.py  tests.py  urls.py
app/members/: tests.py  urls.py  views.py
app/members/migrations/: 0001_initial.py
app/templates/: base.html  index.html
app/templates/members/: user_list.html
