[tool.poetry]
name = "github-action-sample"
version = "0.1.0"
description = ""
authors = ["이한영 <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
coverage = "^5.0.3"
pytest-django = "^3.8.0"
django-extensions = "^2.2.8"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
